// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> renders correctly if prop colorScheme="alert" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW CFHic"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="flatLight" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW bghyxF"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="info" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW jpGbGT"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="link" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW hoEWAl"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="secondary" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW icJddH"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="success" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW jzRfzU"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="warning" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW ceDxgU"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="white" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW eoDtHD"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop disabled set true 1`] = `
<button
  className="ButtonStyled__Button-FHerW jttVrz"
  disabled={true}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop icon="custom" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW huLvvv"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonIconStyled__ButtonIconBoxStyled-hlFixJ hWlQoz"
    disabled={false}
    size="normal"
  >
    <div
      className="IconCustomStyled-ehOkKD dcJGTh"
      color=""
      rotate={0}
      size="normal"
      src="http://files.gamebanana.com/img/ico/sprays/51cb98f9d3747.png"
    />
  </div>
</button>
`;

exports[`<Button/> renders correctly if prop icon="svg" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW huLvvv"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonIconStyled__ButtonIconBoxStyled-hlFixJ hWlQoz"
    disabled={false}
    size="normal"
  >
    <div
      className="IconSvgStyled-kZHpyB dYiAvB"
      color=""
      rotate={0}
      size="normal"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <polygon
          points="9,19.4 3.3,13.7 4.7,12.3 9,16.6 19.8,5.8 21.2,7.2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly if prop kind="primary" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW kimsbx"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop narrow set 1`] = `
<button
  className="ButtonStyled__Button-FHerW gJGngs"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop radius="default" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW huLvvv"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop radius="none" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW fntQyS"
  disabled={false}
  onClick={[Function]}
  radius="none"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop radius="rounded" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW hdLfOm"
  disabled={false}
  onClick={[Function]}
  radius="rounded"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop raised set to true 1`] = `
<button
  className="ButtonStyled__Button-FHerW dkEoeG"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop size set inline 1`] = `
<button
  className="ButtonStyled__Button-FHerW bgTVhT"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="inline"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop size set large 1`] = `
<button
  className="ButtonStyled__Button-FHerW kvAqiP"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="large"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop size set small 1`] = `
<button
  className="ButtonStyled__Button-FHerW hZFdTv"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="small"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop text set 1`] = `
<button
  className="ButtonStyled__Button-FHerW ckmWbJ"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonTextStyled-kqmWUR foLdiD"
    size="normal"
  >
    <div
      className="ButtonTitleStyled-EwESb hkRlbG"
      size="normal"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly if prop text="foo" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW ckmWbJ"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonTextStyled-kqmWUR foLdiD"
    size="normal"
  >
    <div
      className="ButtonTitleStyled-EwESb hkRlbG"
      size="normal"
    >
      foo
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly if props narrow false and radius rounded 1`] = `
<button
  className="ButtonStyled__Button-FHerW lnxOMm"
  disabled={false}
  onClick={[Function]}
  radius="rounded"
  size="normal"
  title=""
>
  <div
    className="ButtonTextStyled-kqmWUR foLdiD"
    size="normal"
  >
    <div
      className="ButtonTitleStyled-EwESb hkRlbG"
      size="normal"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly if props text and subtitle are set 1`] = `
<button
  className="ButtonStyled__Button-FHerW WtErV"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonTextStyled-kqmWUR foLdiD"
    size="normal"
  >
    <div
      className="ButtonSubtitleStyled-bFHACI laqQqJ"
      size="normal"
    >
      sup
    </div>
    <div
      className="ButtonTitleStyled-EwESb hkRlbG"
      size="normal"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly with default props 1`] = `
<button
  className="ButtonStyled__Button-FHerW huLvvv"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;
